Minor changes to landing page.

--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ analytics:
 author:
   name             : "Jamie Lohoff"
   avatar           : "/assets/02.jpg"
-  bio              : "I am physicist working at the intersection of Artificial Intelligence and Neuroscience. Think brain-inspired computing..."
+  bio              : "PhD in AI @ FZ Jülich + RWTH Aachen, Physicist"
   location         : "Aachen, Germany"
   email            :
   links:
