Refactored some code.

--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ analytics:
 author:
   name             : "Jamie Lohoff"
   avatar           : "/assets/02.jpg"
-  bio              : "PhD in AI @ FZ Jülich\nPhysicist\nThe word `impossible` is not in my dictionary."
+  bio              : "PhD in AI @ FZ Jülich, Physicist      The word `impossible` is not in my dictionary."
   location         : "Aachen, Germany"
   email            :
   links:
