--- a/_config.yml
+++ b/_config.yml
@@ -122,9 +122,9 @@ author:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/jamielohoff"
-    - label: "Instagram"
+    - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
-      url: "https://linkedin.com/jamielohoff"
+      url: "https://linkedin.com/in/jamiegrieser"
 
 # Site Footer
 footer:
