--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "Personal Blog"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Jamie Lohoff"
-description              : "My personal blog where I write about things that I come across during my PhD."
+description              : "My personal blog where I write about things I like."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
