--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@
 # https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/#installing-the-theme
 
 # theme                  : "minimal-mistakes-jekyll"
-# remote_theme           : "mmistakes/minimal-mistakes"
+remote_theme           : "mmistakes/minimal-mistakes"
 minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
@@ -105,7 +105,7 @@ analytics:
 # Site Author
 author:
   name             : "Jamie Lohoff"
-  avatar           : "/assets/02.jpg"
+  avatar           : "/img/02.jpg"
   bio              : "PhD in AI @ FZ Jülich, Physicist, Interned at CSHL, Bosch"
   location         : "Aachen, Germany"
   email            :
